# s11

./: .gitignore  .releaserc.json  BUILD.md  CLAUDE.md  CONTEXT.md  Cargo.toml  IMPLEMENTATION_PLAN.md  INITIAL_PLAN.md  IR_PLAN.md  Justfile  LICENSE  PHASE3_PLAN.md  PLAN.md  PORT.md  README.md  STATUS.md  TUTORIAL.md  build_tests.sh  ci_check.sh  codecov.yml  commitlint.config.cjs  mutants.toml  rust-toolchain.toml  test_all.sh
.cargo/: mutants.toml
.claude/: ralph-loop.local.md  settings.json
.github/: dependabot.yml
.github/semantic-release/: prepare.sh
.github/workflows/: autofix.yml  cargo-mutants-pr.yml  cargo-mutants.yml  claude.yml  codeql.yml  coverage.yml  lint-pr-title.yml  release.yml  rust-clippy.yml  test.yml
.ultraplan/: x86-backend.md
benches/: README.md  algebraic_fusion.rs  common.rs  hackers_delight.rs  llvm_codegen.rs  smt_clz.rs
benches/algebraic_fusion/: add_commute.s  and_redundant.s  csel_constant.s  csinc_inc.s  div_pow2_asr.s  double_neg.s  mov_add_fuse.s  mul_add_madd.s  mul_pow2_lsl.s  or_idempotent.s  shift_fuse_lsl.s  sub_mul_msub.s  sub_via_add.s  xor_self_zero.s  zero_idiom_eor.s
benches/hackers_delight/: abs.s  abs_csel.s  average.s  clear_low_bit.s  conditional_neg.s  doz.s  extract_sign.s  is_pow2_flag.s  isolate_low_bit.s  mask_low_bits.s  max.s  min.s  mul_pow2.s  parity_low_byte.s  rotl_5.s  rotr_5.s  sign_branchfree.s  sign_extend_w.s  swap_no_temp.s  zero_low_byte.s
benches/llvm_codegen/: README.md
docs/: RELEASING.md  capability.md
docs/adr/: 0001-derive-live-in-from-def-use.md  0002-mvp-restricts-flags-live-out.md  0003-llm-prompt-no-subset-hint.md  0004-isa-trait-collapse.md  0005-riscv-assembler-strategy.md  0006-live-out-cli-grammar.md  0007-memory-model.md  0008-nzcv-live-out-contract.md  0009-auto-whole-binary-driver.md  0010-x86-register-views.md  0011-neon-register-state.md  0011-zero-solver-timeout-disables-smt.md
prompts/: impl.md  plan.md
scripts/: bump-version.sh  harvest_llvm_codegen.sh  mutants_summary.py  run-mutants.sh  test_harvest_llvm_codegen.sh  test_mutants_summary.py  test_wtm.py  wtm.py
src/: bench_support.rs  capstone_bridge.rs  docs_support.rs  lib.rs  main.rs  test_utils.rs
src/assembler/: mod.rs  x86.rs
src/elf_patcher/: mod.rs
src/ir/: aarch64_encoding.rs  instructions.rs  mod.rs  types.rs
src/isa/: aarch64.rs  mod.rs  riscv.rs  traits.rs  x86.rs
src/parser/: mod.rs  x86.rs
src/search/: candidate.rs  candidate_x86.rs  config.rs  mod.rs  result.rs
src/search/enumerative/: mod.rs  search.rs
src/search/llm/: codex.rs  ledger.rs  mod.rs  outcome.rs  prompt.rs  test_support.rs
src/search/parallel/: channel.rs  config.rs  coordinator.rs  mod.rs
src/search/stochastic/: acceptance.rs  backend.rs  mcmc.rs  mod.rs  mutation.rs
src/search/symbolic/: backend.rs  mod.rs  sketch.rs  synthesis.rs
src/semantics/: concrete.rs  concrete_x86.rs  cost.rs  cost_x86.rs  equivalence.rs  live_out.rs  mod.rs  simple_equiv.rs  smt.rs  smt_x86.rs  state.rs
src/test_utils/: instruction_fixtures.rs
src/validation/: downstream.rs  live_out.rs  mod.rs  random.rs
tests/: arrays.c  functions.c  loops.c  optimizable.c  simple.c  tutorial_test.s
tests/asm/: commute1.s  commute2.s  seq1.s  seq2.s  seq3.s  zero1.s  zero2.s
tests/data/llm_demo/: 01_mov_add.s  02_xor_zero.s  03_redundant_mov.s  04_add_chain.s  05_sub_via_add.s  06_double_via_shift.s  07_dead_compute.s  08_chain05.s  09_chain10.s  10_chain15.s  11_chain20.s  run_demo.sh
tests/integration/: bump_version_test.rs  carry_chain.rs  disasm_test.rs  docs_capability.rs  equiv_test.rs  live_out_cli_test.rs  mod.rs  opt_test.rs
tests/x86_asm/: README.md  dup_mov_imm.s
