[package]
name = "s11"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"] # TODO: Customize this
description = "s11: AArch64 optimizer demonstrating IR, SMT-based equivalence checking, and basic enumerative search."
license = "MIT OR Apache-2.0" # Choose one or keep both if you prefer dual licensing
repository = "https://github.com/your_username/s11" # TODO: Customize this
readme = "README.md"
keywords = ["aarch64", "s11", "compiler", "optimization", "smt"]
categories = ["compilers", "development-tools::testing", "science"]

[dependencies]
elf = "0.7"
capstone = "0.12"
clap = { version = "4.0", features = ["derive"] }
z3 = { version = "0.12", optional = true }

[features]
default = ["z3"]
z3 = ["dep:z3"]

[dev-dependencies]
proptest = "1.4"

# Optional: Profile for release builds for better performance/smaller binary
[profile.release]
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Maximize optimizations
panic = 'abort'      # Abort on panic for smaller binary (no unwinding)
strip = true         # Strip symbols from the binary
opt-level = 3        # Ensure highest optimization level (default for release but explicit)
