[package]
name = "s11"
version = "0.1.0"
edition = "2024"
authors = ["Paulo Matos <p@ocmatos.com>"]
description = "s11: AArch64 optimizer demonstrating IR, SMT-based equivalence checking, and basic enumerative search."
license = "MIT OR Apache-2.0" # Choose one or keep both if you prefer dual licensing
repository = "https://github.com/pmatos/s11"
readme = "README.md"
keywords = ["aarch64", "s11", "compiler", "optimization", "smt"]
categories = ["compilers", "development-tools::testing", "science"]

[dependencies]
elf = "0.8"
capstone = "0.14"
clap = { version = "4.5", features = ["derive"] }
z3 = { version = "0.19", optional = true }
dynasmrt = "4.0.1"
dynasm = "4.0.1"
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.10"
crossbeam-channel = "0.5"
num_cpus = "1.16"

[features]
default = ["z3"]
z3 = ["dep:z3"]

[dev-dependencies]
proptest = "1.10"

# Optional: Profile for release builds for better performance/smaller binary
[profile.release]
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Maximize optimizations
panic = 'abort'      # Abort on panic for smaller binary (no unwinding)
strip = true         # Strip symbols from the binary
opt-level = 3        # Ensure highest optimization level (default for release but explicit)
