[package]
name = "s11"
version = "0.1.0"
edition = "2024"
authors = ["Paulo Matos <p@ocmatos.com>"]
description = "s11: AArch64 optimizer demonstrating IR, SMT-based equivalence checking, and basic enumerative search."
license = "MIT OR Apache-2.0" # Choose one or keep both if you prefer dual licensing
repository = "https://github.com/pmatos/s11"
readme = "README.md"
keywords = ["aarch64", "s11", "compiler", "optimization", "smt"]
categories = ["compilers", "development-tools::testing", "science"]

[dependencies]
elf = "0.8"
capstone = "0.14"
clap = { version = "4.6", features = ["derive"] }
z3 = "0.20"
dynasmrt = "5.0.0"
dynasm = "5.0.0"
rand = "0.10"
rand_chacha = "0.10"
rayon = "1.12"
crossbeam-channel = "0.5"
num_cpus = "1.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1.11"
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.27"

# Optional: Profile for release builds for better performance/smaller binary
[profile.release]
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Maximize optimizations
panic = 'abort'      # Abort on panic for smaller binary (no unwinding)
strip = true         # Strip symbols from the binary
opt-level = 3        # Ensure highest optimization level (default for release but explicit)

# Benchmark suite (issue #70). `harness = false` swaps the libtest
# harness for criterion's custom one. See benches/README.md for the
# JSON-Lines report schema and how to add a new benchmark.
[[bench]]
name = "hackers_delight"
harness = false

[[bench]]
name = "llvm_codegen"
harness = false

[[bench]]
name = "algebraic_fusion"
harness = false
